<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".createlog"
    android:layout_gravity="center"
    android:background="@color/register_bk_color"
    android:focusableInTouchMode="true"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_width="177dp"
                    android:layout_height="181dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/msg"
                    android:textColor="@color/white" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="0dp"
                    android:src="@drawable/ic_login_hero"
                    android:contentDescription="@string/img1" />

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="40dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputName"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editTextName"
                            style="@style/modifiedEditText"
                            android:autofillHints=""
                            android:hint="@string/nomE"
                            android:inputType="textPersonName"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>


                     <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputName2"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editTextName2"
                            style="@style/modifiedEditText"
                            android:autofillHints=""
                            android:hint="@string/emailE"
                            android:inputType="textEmailAddress"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputName3"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editTextName3"
                            style="@style/modifiedEditText"
                            android:autofillHints=""
                            android:hint="@string/tel"
                            android:inputType="phone"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputPassword"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        app:endIconMode="password_toggle">


                        <EditText
                            android:id="@+id/editTextPassword"
                            style="@style/modifiedEditText"
                            android:hint="@string/login_password_hint"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:autofillHints="" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                        android:id="@+id/LoginButton"
                        style="@style/loginButton"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:text="@string/btnsigup"
                        android:textColor="@color/white"
                        android:onClick="signup"
                        app:initialCornerAngle="27dp"
                        app:spinning_bar_color="@color/white"
                        app:spinning_bar_padding="6dp"
                        app:spinning_bar_width="4dp"
                        />

                    <TextView
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:text="@string/already"
                        android:textAlignment="center"
                        android:textColor="@color/themeColor"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:onClick="back"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>



        </LinearLayout>

    </ScrollView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="30dp"
        android:onClick="back"
        android:contentDescription="@string/img1"
        android:src="@drawable/ic_back_img"/>

</RelativeLayout>