<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nav_menu_about"
    tools:openDrawer="end"
    android:id="@+id/drawer_layout_about">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view_about"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transwhite"
        android:layout_gravity="start"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/main_menu"/>

    <LinearLayout
        android:id="@+id/content_about"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/start">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <ImageView
                android:id="@+id/menu_icon_about"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/menu"
                android:layout_centerVertical="true"
                android:contentDescription="TODO" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/info"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="5dp"
                android:contentDescription="TODO" />

            <TextView
                android:id="@+id/appname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/propos"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/laout1">

                    <ImageView
                        android:id="@+id/iai"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:src="@drawable/iai"
                        android:contentDescription="TODO" />

                    <TextView
                        android:id="@+id/pro"
                        android:layout_marginTop="10sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_below="@+id/iai"
                        android:text="@string/app_name"
                        android:textColor="@color/purple_200"
                        android:textSize="40sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/theme"
                        android:layout_marginTop="10sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_below="@+id/pro"
                        android:text="@string/pro"
                        android:textSize="30sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_marginTop="10sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/theme"
                        android:text="Group Members"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_marginStart="20dp"
                        android:id="@+id/group"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/group"
                    android:padding="5dp">
                    <TextView
                        android:id="@+id/ngou"
                        android:layout_marginTop="10sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ngoune"
                        android:textSize="20sp"
                        android:textStyle="italic"
                        android:layout_marginStart="20dp"/>

                    <TextView
                        android:id="@+id/yvana"
                        android:layout_marginTop="10sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yvana"
                        android:textSize="20sp"
                        android:textStyle="italic"
                        android:layout_below="@id/ngou"
                        android:layout_marginStart="20dp"/>

                    <TextView
                        android:id="@+id/ngues"
                        android:layout_marginTop="10sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ngues"
                        android:textSize="20sp"
                        android:textStyle="italic"
                        android:layout_below="@id/yvana"
                        android:layout_marginStart="20dp"/>

                    <TextView
                        android:id="@+id/ngui"
                        android:layout_marginTop="10sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ngui"
                        android:textSize="20sp"
                        android:textStyle="italic"
                        android:layout_below="@id/ngues"
                        android:layout_marginStart="20dp"/>

                    <TextView
                        android:id="@+id/nguel"
                        android:layout_marginTop="10sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nguel"
                        android:textSize="20sp"
                        android:textStyle="italic"
                        android:layout_below="@id/ngui"
                        android:layout_marginStart="20dp"/>

                </RelativeLayout>

                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>